fix: use correct grid on mobile

--- a/components/ui/Grid/Grid.module.css
+++ b/components/ui/Grid/Grid.module.css
@@ -3,11 +3,11 @@
 
   display: grid;
   max-width: 1210px;
-  grid-template-columns: auto 1fr;
-  grid-template-rows: 1fr auto;
+  grid-template-rows: auto 1fr auto;
   grid-template-areas:
-    "header header"
-    "content right";
+    "header"
+    "content"
+    "right";
 }
 
 @screen sm {
@@ -16,5 +16,8 @@
 
     grid-template-columns: 1fr minmax(200px, 30%);
     grid-template-rows: auto;
+    grid-template-areas:
+      "header header"
+      "content right";
   }
 }
